@@ -12,6 +12,7 @@ Bugfixes
 * Restore `annotation_helper.tmpl` with dummy content - fix themes still mentioning it
   (Issue #3764, #3773)
 * Fix compatibility with watchdog 4 (Issue #3766)
+* `nikola serve` now works with non-root SITE_URL.
 
 New in v8.3.1
 =============
